testdata/baselines/reference/submodule/conformance/typeParameterAssignability.errors.txt
typeParameterAssignability.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability.ts(5,5): error TS2322: Type 'T' is not assignable to type 'U'.


==== typeParameterAssignability.ts (2 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    function foo<T, U>(t: T, u: U) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! related TS2208 typeParameterAssignability.ts:3:17: This type parameter might need an `extends T` constraint.
        u = t; // error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'U'.
!!! related TS2208 typeParameterAssignability.ts:3:14: This type parameter might need an `extends U` constraint.
    }